--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
         <script src="api.js"></script>
         <title>COVID api in Javascript</title>
+        
+        <!-- Create by NgocMinhIT -->
+        
     </head>
     <body>
         <div class="container">
